# MLCD

./: .gitignore  Ellipsoidal_2d_10000pts.csv  Ellipsoidal_5d_10000pts.csv  LICENSE.md  README.md  change_figure.py  compute_example.py  data-processing.py  data-processing2.py  data_shuffle.py  ellipsoid.py  gitignore.txt  learn_decomposition.ipynb  main.py  make_histogram.py  make_histogram_cluster_version.py  model.pth  pyproject.toml  requirements.txt  run_experiment.py  single_example.py  slurm_script_job_array.sh  temp_testing.py  test.py
amarel_cluster_code/: slurm_script_job_array.sh
attractor_id/: __init__.py  compute_example.py  config.py  cube.py  data.py  domain.py  histograms.py  homology.py  jupyter_functions.py  misc.py  network.py  utils.py
config/: DSGRN_2d_network.txt  EMT.txt  curved_separatrix.txt  ellipsoidal_2d.txt  ellipsoidal_3d.txt  ellipsoidal_4d.txt  ellipsoidal_5d.txt  ellipsoidal_6d.txt  ellipsoidal_larger_domain_4d.txt  ellipsoidal_larger_domain_5d.txt  failure_example.txt  iris.txt  leslie.txt  periodic.txt  periodic_3labels.txt  radial_2labels.txt  radial_3labels.txt  straight_separatrix.txt  system1.txt  system2.txt  system3.txt  system4.txt  system5.txt  system6.txt  system7.txt  system8.txt  system9.txt  temp_config_info
data/: system_number_meanings.txt
data_production/: AttId.ipynb  Attractor_Identification.py  analyze_data.py  format_data.py  hom.py  homcubes  iterate.py  make_data.py  plot_data.py  systems.py
data_utils/: data-processing.py  data-processing2.py
datasets/: 2formatted_Radial_example_1000_test.csv  (+8 more)
(+125 files in other folders)
