[project]
name = "MLCD"
version = "1.0.0"
description = "Machine Learned Cubical Decomposition"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.23",
  "polytope>=0.2.4",
  "torch>=2.0.1",
  "cvxopt>=1.3.2",
  "matplotlib>=3.3",
  "pychomp2>=0.6.4",
  "scipy>=1.7.3",
  "scikit-learn>=1.3.2",
  "ripser>=0.6.1",
  "persim>=0.3.1",
  "gudhi>=3.5.0"
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
